# dsp_restaurant_tips

./: .env  .gitignore  Dockerfile  Makefile  README.md  airflow.cfg  airflow.db  backup_pyproject.toml  docker-compose.yml  example_cfg_for_airflow.cfg  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4a93c9835f1a_initial_migration.py  53446c711ef8_initial_migration.py  ccb5826a61eb_add_indices.py
grafana/dashboards/: data_issues_dashboard.json  ml_engineering_dashboard.json
src/: main.py
src/app/: app.py
src/clients/: ms_teams_client.py
src/configs/: pre_processing_configs.yml
src/dags/: ingestion_pipeline.py  prediction_pipeline.py  production_pipeline.py
src/data_pipelines/: ingestion.py
src/data_validation_logs/: 2025-02-19 17:17:45.json
src/database/: models.py  service_manager.py  session_manager.py
src/ingestion/: ingestion.py
src/ml_pipelines/: inference.py  pre_processing.py  training.py
src/notebook/: database_errors.ipynb
src/notebooks/: database_errors.ipynb
src/services/: api_controller.py  create_data_for_dashboards.py  create_false_data.py  (+1 more)
tests/: test_airflow.py  test_api_controller.py  test_api_request_parser.py  test_api_response_parser.py  test_api_validation_manager.py  test_connection.py  test_csv_parser.py  test_data_pipelines.py  test_database.py  test_database_service_manager.py  test_directory_manager.py  test_ms_teams_client.py  test_predict_model.py  test_process_data.py  test_python_sys.py  test_split_data.py  test_utils_helper.py  test_validation_manager.py  test_validation_service.py
(+79 files in other folders)
