[tool.poetry]
name = "dsp-restaurant-sales"
version = "0.1.0"
description = ""
authors = ["nguyen <nguyenhainguyen2606@gmail.com>"]
readme = "README.md"
packages = [{include = "dsp_restaurant_sales"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.41.1"
apache-airflow = "^2.10.4"
great-expectations = "^1.3.4"
numpy = "1.26.4"
pandas = "2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
